Fix button positioning on mobile devices

--- a/src/scss/message-box.scss
+++ b/src/scss/message-box.scss
@@ -204,10 +204,6 @@
       transition: top 0.1s ease-in;
     }
 
-    &--off, &--on {
-      width: 100%;
-    }
-
     &__message-emoji {
       font-size: 20px;
     }
