--- a/src/scss/shared-styles-buttons.scss
+++ b/src/scss/shared-styles-buttons.scss
@@ -256,6 +256,10 @@
     &--turn-on {
       animation: none;
     }
+
+    &--turn-off, &--turn-on {
+      width: 100%;
+    }
   }
 }
 
